Kubernetes/manifests/2pods-with-shared-volumes.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-storage
  name: nginx-storage
spec:
  containers:
  - image: nginx
    name: nginx-storage
    resources: {}
    volumeMounts:
      - mountPath: /scratch
        name: scratch-volume
  - image: busybox
    name: busybox-storage
    command: ["bin/sh", "-c"]
    args: ["sleep 1000"] 
    resources: {}
    volumeMounts:
      - mountPath: /scratch
        name: scratch-volume

  volumes:
  - name: scratch-volume
    emptyDir:
      sizeLimit: "50Mi"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
