Kubernetes/manifests/deploy-httpd-exiting-error.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpd-depl-templ
  name: httpd-depl-templ
spec:
  replicas: 10
  selector:
    matchLabels:
      app: httpd-depl-templ
  template:
    metadata:
      labels:
        app: httpd-depl-templ
    spec:
      containers:
      - image: httpd:alpine3.18
        name: httpd
        command: ["/bin/bash", "-c"] # override the default command
        args: ["sleep 5; exit 1"] # wait 30 seconds and then exit with an error
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
status: {}
