Kubernetes/manifests/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: secret-app
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: api
        image: "{IMAGE_NAME}"
        ports:
          - containerPort: 44300
        imagePullPolicy: IfNotPresent
