Kubernetes/manifests/nginx-001.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: attacker
    method: from-code
  name: evil-kali
spec:
  containers:
  - image: kalilinux/kali-rolling
    name: evil-kali
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
